[package]
name = "bbs_issue_212"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { version = "0.7", features = ["experimental"]}
sha3 = "0.9"
sha2 = "0.9"
rand = { version = "0.8", features = ["std_rng"] }
rand_chacha = "0.3.1"
criterion = { version = "0.4.0", features = ["html_reports"] }
ff = "0.12"

[[bench]]
name = "bench_all"
path = "benches/sha256_bench.rs"
harness = false